@@ -59,11 +59,7 @@
     <file>light-empty-14.png</file>
     <file>light-green-14.png</file>
     <file>light-yellow-14.png</file>
-    <file>ofa-entry-page-green-check-14.png</file>
     <file>ofa-entry-page-green-check-16.png</file>
-    <file>ofa-entry-page-green-check-28.png</file>
-    <file>ofa-entry-page-red-cross-14.png</file>
     <file>ofa-entry-page-red-cross-16.png</file>
-    <file>ofa-entry-page-red-cross-28.png</file>
   </gresource>
 </gresources>
